# CellProfiler-plugins

./: .buildinfo  .gitignore  .travis.yml  CITATION.cff  CNAME  DoGNet.py  IdentifyNucleus.py  RCNN.py  README.md  _boolean.py  _character.py  activecontourmodel.py  blobdetection.py  calculatehistogram.py  calculatemoments.py  callbarcodes.py  citing.html  classifypixelsunet.py  compensatecolors.py  constrainobjects.py  contributing_plugins.html  convertoutlinestoobjects.py  declump.py  declumpobjects.py  distancetransform.py  enhancedmeasuretexture.py  environment.yml  exporttocellh5.py  gammacorrection.py  genindex.html  histogramequalization.py  histogrammatching.py  identifylinearobjects.py  identifynucleus.py  identifyyeastcells.py  measure_population_context.py  measureimagefocus.py  measureimagefocus_README.md  measureimagefocus_requirements.txt  measureimagequalitygoogle.py  (+35 more)
CP5/active_plugins/apposednapari/: pixi.toml  pyproject.toml
CellProfiler2/: identifylinearobjects.py
CellProfiler3/: DoGNet.py  calculatemoments.py  compensatecolors.py  measureradialentropy.py  measuretrackquality.py  rescale_mean_sd.py  runimagej.py
CellProfiler4_AutoConvert/: blobdetection.py  calculatemoments.py  callbarcodes.py  compensatecolors.py  edgedetection.py  enhancedmeasuretexture.py  exporttocellh5.py  identifylinearobjects.py  imagegradient.py  measureimagefocus.py  measureradialentropy.py  mergeobjects.py  noise2void.py  nucleaizer.py  randomwalkeralgorithm.py  rescalemodepercentile.py  runimagej.py  save_16bit_pngs.py  seedobjects.py  thresh_all.py  transformfilters.py  (+1 more)
(+232 files in other folders)
