# [build-system]
# requires = [
#     "flit_core >=3.2,<4",
# ]
# build-backend = "flit_core.buildapi"

[project]
name = "cellprofiler_plugins"
# authors = [
#     {name = "hello", email = "hello"},
# ]
readme = "README.md"
requires-python = ">=3.8,<3.10"
dynamic = ["version", "description"]

dependencies = [
    "cellprofiler",
    "cellprofiler-core",
]

[project.optional-dependencies]
cellpose = [
    "cellpose>=1.0.2"
]