[project]
authors = [{name = "Nodar Gogoberidze", email = "gnodar01@gmail.com"}]
dependencies = [
  "napari",
  "appose",
  "pyqt",
]
name = "apposednapari"
requires-python = ">=3.10"
version = "0.1.0"

[project.scripts]
apnp = "apposednapari.__main__:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
